<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:backgroundTint="@color/systemBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.lucassantanna.randomgod.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainBtnPickRandom"
        android:id="@+id/btnPickRandom"
        android:backgroundTint="@color/btnMainBackground"
        android:textColor="@color/btnMainText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainBtnGodOfTheDay"
        android:id="@+id/btnGodOfTheDay"
        android:backgroundTint="@color/btnMainBackground"
        android:textColor="@color/btnMainText"
        android:layout_below="@+id/btnPickRandom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainBtnRandomFavorite"
        android:id="@+id/btnRandomFavorite"
        android:backgroundTint="@color/btnMainBackground"
        android:textColor="@color/btnMainText"
        android:layout_below="@+id/btnGodOfTheDay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />
</RelativeLayout>